# web-content-extraction-benchmark

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  wceb
datasets/: combined.tar.xz  raw.tar.xz
extraction_benchmark/: __init__.py  cluster.py  complexity.py  eval.py  extract.py  main.py
outputs/: html-features.tar.xz  metrics-computed.tar.xz  model-outputs.tar.xz
src/: wceb.py
src/extraction_benchmark/: cluster.py  complexity.py  dataset_readers.py  eval.py  extract.py  globals.py  paths.py  plt.py  util.py
src/extraction_benchmark/cli/: __init__.py  complexity.py  eval.py  extract.py
src/extraction_benchmark/extractors/: __init__.py  bte.py  ensemble.py  extractors.py
src/extraction_benchmark/extractors/boilernet/: README.md  __init__.py  model.h5  tags.json  words.json
src/extraction_benchmark/extractors/boilernet/net/: preprocess.py  train.py
src/extraction_benchmark/extractors/boilernet/net/misc/: prepare_dataset.py
src/extraction_benchmark/extractors/go_domdistiller/: .gitattributes  LICENSE  README.md  __init__.py  go_domdistiller_cli
src/extraction_benchmark/extractors/web2text/: .gitignore  README.md  __init__.py
